[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deforum-flux"
version = "0.1.2"
description = "Flux backend for Deforum"
authors = [{name = "Deforum Inc", email = "hello@deforum.io"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "einops",
    "fire",
    "huggingface-hub",
    "safetensors",
    "sentencepiece",
    "transformers",
    "tokenizers",
    "protobuf",
    "requests",
    "ruff",
    "opencv-python",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt-cu12",
    "colored",
    "onnx",
    "onnxruntime",
    "onnxruntime-gpu",
    "onnx-graphsurgeon",
    "polygraphy",
]

[project.urls]
Homepage = "https://github.com/deforum/flux"
Repository = "https://github.com/deforum/flux"